--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col menu col-sm col-md">
+      <div class="col menu col-sm-12 col-md-12">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">about us</a></li>
@@ -28,11 +28,20 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-8 col-sm col-md content">
+      <div class="col-md-3 col-sm-12 sidebar">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">gallary</a></li>
+          <li><a href="#">products</a></li>
+          <li><a href="#">contact us</a></li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-sm-12 content">
         <h2>Discription</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto magnam aut odio consequuntur culpa quam dolorem! Ducimus eaque, modi quidem nesciunt vel ipsum veritatis architecto fugit ea totam tenetur, dolore optio aspernatur, ad voluptatibus repellat dicta culpa deserunt. Possimus debitis facilis eaque quia placeat quos minima consectetur deleniti voluptate? Aut, quam deserunt rem repudiandae, voluptatum, sapiente natus nam voluptates sunt nisi sed odit eaque facere qui distinctio quia labore illo fuga dolore sit voluptatem autem. Magni quisquam assumenda esse deserunt minus in incidunt, sequi accusamus culpa nam ut laborum quidem sunt placeat pariatur iste excepturi atque voluptatibus necessitatibus architecto?</p>
       </div>
-      <div class="col-4 col-sm col-md sidebar">
+      <div class="col-md-3 col-sm-12 sidebar">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">about us</a></li>
